platform/gitea/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-http
  namespace: gitea
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: gitea
